[tool.poetry]
name = "aioauth2"
version = "0.1.0"
description = "Asynchronous OAuth Python library"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["oauth", "oauth2", "async", "asyncio"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/rominf/aioauth2"

[tool.poetry.dependencies]
python = "^3.6"
aioify = {git = "https://github.com/yifeikong/aioify.git"}
poetry-version = "^0.1.2"
oauth2 = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
